--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "qr-code-pdf-generator",
   "version": "1.0.0",
-  "description": "Azure Function App to generate QR codes and PDFs.",
+  "description": "An Azure Function App to generate QR codes and create PDFs.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",        // Starts the application
+    "build": "echo 'No build step required'", // Optional, for compatibility with workflows
+    "test": "echo 'No tests defined'"        // Optional, replace with your test framework if needed
+  },
+  "engines": {
+    "node": ">=20.0.0"  // Ensures compatibility with Node.js 20+
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.1",
-    "qrcode": "^1.5.0",
-    "pdfkit": "^0.12.1"
-  }
+    "express": "^4.18.2",          // Web framework for HTTP requests
+    "body-parser": "^1.20.2",      // Middleware to parse JSON requests
+    "qrcode": "^1.5.0",            // QR Code generation library
+    "pdfkit": "^0.13.0"            // PDF generation library
+  },
+  "devDependencies": {},
+  "author": "Nizami",
+  "license": "MIT"
 }
