--- a/local.settings.json
+++ b/local.settings.json
@@ -2,7 +2,6 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "node",
-    "MyCustomSetting": "custom_value"
+    "FUNCTIONS_WORKER_RUNTIME": "node"
   }
 }
