--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-    "name": "qr-code-generator",
-    "version": "1.0.0",
-    "description": "Azure Function QR Code Generator",
-    "dependencies": {
-        "qrcode": "^1.5.3"
-    }
+  "name": "qrbravo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "qrcode": "^1.5.4"
+  }
 }
