--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "exit 0",
+    "build": "echo 'No build required'"
   },
   "keywords": [],
   "author": "",
