--- a/.github/workflows/main_qrbravo.yml
+++ b/.github/workflows/main_qrbravo.yml
@@ -1,7 +1,11 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-nname: Build and deploy Node.js project to Azure Function App - QRBravo
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js project to Azure Function App - QRBravo
+
 on:
   push:
     branches:
@@ -9,8 +13,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
-  NODE_VERSION: '20'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '20' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build:
@@ -30,7 +34,7 @@ jobs:
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
           npm run build --if-present
-          # Burada test əmrini çıxarırıq
+          npm run test --if-present
           popd
 
       - name: Zip artifact for deployment
@@ -41,4 +45,28 @@ jobs:
         with:
           name: node-app
           path: release.zip
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+      
+      - name: 'Run Azure Functions Action'
+        uses: Azure/functions-action@v1
+        id: fa
+        with:
+          app-name: 'QRBravo'
+          slot-name: 'Production'
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_29DE46E902974A64A4C01CA0A08B6C43 }}
+          sku: 'flexconsumption'
         
