--- a/.github/workflows/main_qrbravo.yml
+++ b/.github/workflows/main_qrbravo.yml
@@ -1,9 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js project to Azure Function App - QRBravo
 
 on:
@@ -13,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
+  NODE_VERSION: '20'
 
 jobs:
   build:
@@ -33,8 +27,6 @@ jobs:
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
-          npm run build --if-present
-          npm run test --if-present
           popd
 
       - name: Zip artifact for deployment
@@ -49,8 +41,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
-    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -69,4 +59,3 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_29DE46E902974A64A4C01CA0A08B6C43 }}
           sku: 'flexconsumption'
-        
