--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "qrcode": "^1.5.3",
-    "puppeteer-core": "^21.5.0",
-    "chrome-aws-lambda": "^10.1.0"
+    "puppeteer": "^23.11.1",
+    "qrcode": "^1.5.4"
   }
 }
