--- a/.github/workflows/main_qrbravo.yml
+++ b/.github/workflows/main_qrbravo.yml
@@ -9,7 +9,6 @@ on:
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
   NODE_VERSION: '20'
-  PUPPETEER_CACHE_DIR: '/tmp/puppeteer'
 
 jobs:
   build:
@@ -23,28 +22,12 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install Puppeteer dependencies
+      - name: 'Resolve Project Dependencies Using Npm'
+        shell: bash
         run: |
-          apt-get update
-          apt-get install -y \
-            libnss3 \
-            libatk1.0-0 \
-            libatk-bridge2.0-0 \
-            libcups2 \
-            libxkbcommon0 \
-            libxcomposite1 \
-            libxrandr2 \
-            libpangocairo-1.0-0 \
-            libpango-1.0-0 \
-            libcairo2 \
-            libgbm1 \
-            libasound2
-
-      - name: 'Resolve Project Dependencies and Install Puppeteer Browser'
-        run: |
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
-          npx puppeteer browsers install chrome
-
+          popd
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
